# project

./: .gitignore  docker-compose.yml
.github/workflows/: actions.yml
Dokumentacja/: conf.py  index.rst
django/: Dockerfile  pyproject.toml
django/pozabanka/: settings.py  urls.py
django/pozabanka/api/: apps.py  pagination.py  routers.py  serializers.py  viewsets.py
django/pozabanka/articles/: models.py
django/pozabanka/articles/management/commands/: clear_articles.py  import_articles.py
django/pozabanka/articles/migrations/: 0001_initial.py  0002_rename_cover_url_source_url.py  0003_alter_article_slug.py  0004_auto_20220227_1943.py  0005_auto_20220227_1944.py  0006_alter_source_article.py  0007_article_tags.py
django/pozabanka/lib/: utils.py
django/pozabanka/stories/migrations/: 0001_initial.py
django/pozabanka/tags/: admin.py  apps.py  models.py
django/pozabanka/tags/migrations/: 0001_initial.py
frontend/: package-lock 2.json  package-lock.json  package.json
frontend/common/: package.json
frontend/common/src/: Card.tsx
frontend/public/: index.html
frontend/src/: App.css  App.js  content.js
frontend/src/components/: Card.js  Header.js  Karuzela.js  Lokalne.js  PageBody.js  Tematy.js
frontend/src/components/Dividers/: Title.js  dividersTheme.js
frontend/src/components/Header/: CardBig.js  (+1 more)
frontend/src/stories/: Button.stories.js
frontend/user_panel/: package-lock.json  package.json
frontend/user_panel/src/: App.tsx
selenium-tests/: Dockerfile  pyproject.toml
selenium-tests/selenium-tests/: test_1.py
sendria/: Dockerfile
(+59 files in other folders)
