[tool.poetry]
name = "pozabańką"
version = "0.1.0"
description = ""
authors = ["pozabańką team"]

[tool.poetry.dependencies]
python = "3.9.*"
django = "3.*"
djangorestframework = "3.*"
black = "*"
django-utils-six = "*"
python-decouple = "*"
pytest-django = "*"
pytest-cov = "*"
newscatcher = { git = "https://github.com/wojtiwojt/newscatcher.git", rev = "693f327" }

[tool.poetry.dev-dependencies]
